increases width of moreInfo div to avoid wrapping of hit span

--- a/css/default/racustom.css
+++ b/css/default/racustom.css
@@ -2128,7 +2128,7 @@ ul.none {
 }
 
 .moreInfo {
-    width: 16%
+    width: 17%
 }
 
 .moreInfo .hit {
